# h2k-hpxml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPENDENCY_CLEANUP_SOLUTION.md  Dockerfile  GUI_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PHASE1_SUMMARY.md  PHASE3_SUMMARY.md  README.md  api_to_support_data_driven_ui.md  certs-complete.md  clean_test_data.py  cli_better.md  conversionconfig.ini  docker-compose.yml  h2k_gui.py  implementation_plan.md  pyproject.toml  refactor.md  refactor_differences.md  requirements.txt  resilience.md  test_cleanup_behavior.py  test_results_baseline.txt  test_results_phase1.txt  test_results_phase2.txt  test_windows_cleanup.py  test_windows_simulation.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  dev_setup.sh  devcontainer.json
.devcontainer/certs/: README.md
.devcontainer/scripts/: README.md  certctl-safe.sh  claude.sh  collect-certificates.bat  create-cert-status-script.sh  detect-certificates.sh  dev-env-init.sh  install-aws-cli.sh  install-certificates.sh  install-claude-cli.sh  install-csharp.sh  install-docker-cli.sh  install-github-cli.sh  install-nodejs.sh  install-python.sh  install-ruby.sh  install-system-aws-cli.sh  install-system-csharp.sh  install-system-docker-cli.sh  install-system-github-cli.sh  install-user-aws.sh  install-user-claude-cli.sh  install-user-github-copilot-cli.sh  install-user-nodejs.sh  install-user-ruby.sh  install-user-uv.sh  install-uv.sh  mcp.sh  post-create.sh  python_env.sh  runtime_nodejs.sh
.github/workflows/: docker-publish.yml
.serena/: project.yml
config/: conversionconfig.dev.ini  conversionconfig.ini  conversionconfig.test.ini
config/defaults/: conversionconfig.template.ini
docker/: BUILD_ARGS.md  README.md  entrypoint.sh  test_container.sh
docs/: API.md  BACKGROUND.md  DEVELOPMENT.md  DOCKER.md  HPXML_EDITOR_IMPLEMENTATION_SPEC.md  HPXML_SUBSET.md  INSTALLATION.md  LIBRARY.md  PERFORMANCE.md  README.md  USER_GUIDE.md  docker_windows_install.md  golden_files_safety.md  hpxml.md  manual_install.md  resilience.md  vscode.md
docs/api/: field_inventory.json  field_inventory_components.json
docs/api/schemas/: complete_schema.json  envelope_schema.json  environment_schema.json  hvac_schema.json  loads_schema.json
docs/archive/: CLAUDE.md  TODO.md
docs/archive/prompts/: dependencies.md  diagnostics.md  refactor.md  refactor2.md  refactor3.md  resilience.md  test_development.md
docs/development/: configuration_system.md  vscode.md
docs/installation/: docker_windows_install.md  installation_test.md  manual_install.md  quick_start_uv.md  test_after_install.md
docs/status/: assumptions.md  issues.md
examples/FortSimpsonExamples-that-dont-run-in-hpxml/: 1212D00012.H2K  1218D01269.H2K  1218D01366.H2K  1218D01367.H2K  1218D01398.H2K  1218D01399.H2K  1227D01035.H2K  1227D01036.H2K  1234D00106.H2K  1234D00107.H2K  1235D00014.H2K  1235D00016.H2K  3204D02821.H2K  3204D03056.H2K  3204D03530.H2K  3204D03801.H2K  3205D03024.H2K  3205D03131.H2K  5932D00112.H2K  5932D00113.H2K  5932D00114.H2K  5932D00115.H2K  5932D00116.H2K  5932D00118.H2K  5932D00119.H2K  5932D00120.H2K  5932D00123.H2K
prompts/: dependencies.md  h2khpxml_gui.md  resilience.md  test_development.md
scripts/: README.md  compare.py  test_demo.py
scripts/development/: demo_windows_paths.py  install_and_test.py  test_windows.py
scripts/installation/: quick_test.py  smart_test.py  test_installation.py
src/h2k_hpxml/: __init__.py  __main__.py  api.py  exceptions.py  installer.py  types.py
src/h2k_hpxml/analysis/: annual.py  results_config.json
src/h2k_hpxml/cli/: __init__.py  convert.py  demo.py  demo_strings.py  resilience.py
src/h2k_hpxml/components/: __init__.py  ashrae140_mode.py  baseload_appliances.py  baseload_miscloads.py  enclosure_basements.py  enclosure_ceilings.py  enclosure_crawlspaces.py  enclosure_doors.py  enclosure_floors.py  enclosure_floors_refactored.py  enclosure_infiltration.py  enclosure_rim_joists.py  enclosure_skylights.py  enclosure_slabs.py  enclosure_walls.py  enclosure_windows.py  system_additional_openings.py  system_air_conditioning.py  system_coordinator.py  system_heat_pumps.py  system_heating_primary.py  system_heating_secondary.py  system_hot_water.py  system_hot_water_distribution.py  system_hvac_control.py  system_hvac_distribution.py  system_solar_generation.py  system_ventilation.py  system_water_fixtures.py
src/h2k_hpxml/config/: __init__.py  manager.py
src/h2k_hpxml/core/: __init__.py  data_utils.py  h2k_parser.py  hpxml_assembly.py  input_validation.py  model.py  template_loader.py  translator.py
src/h2k_hpxml/examples/: __init__.py
src/h2k_hpxml/gui/: __init__.py  app.py  main.py
src/h2k_hpxml/resources/: __init__.py  config_foundations.json  config_locations.json  config_numeric.json  config_selection.json  dependency_versions.json
src/h2k_hpxml/schema_api/: __init__.py
src/h2k_hpxml/utils/: README.md  __init__.py  cli_helpers.py  common.py  dependencies.py  emissions.py  h2k.py  logging.py  (+8 more)
tests/: .gitignore  README.md  clean_test_data.py  conftest.py
tests/integration/: test_demo.py  test_energy_comparison.py  test_generate_baseline.py  test_hpxml_comparison.py  test_regression.py  test_resilience.py  test_windows_installation.py
tests/unit/: test_cli_convert.py  test_config_manager.py  test_core_model.py  test_core_translator.py  test_demo_paths.py  test_dependencies.py  test_dependencies_config_update.py  test_dependency_manager_windows.py  test_essential_utilities.py  test_schema_api.py  test_validate_eplusout_sql.py
tests/utils/: __init__.py  cleanup_utils.py  comparison_utils.py  demo_test_automation.py  file_utils.py  generate_baseline_data.py  hpxml_utils.py  sql_utils.py  workflow_utils.py
tools/: README.md  analyze_hpxml_fields.py  cleanup.py  cleanup.sh  compare.py  docker_build_push.py  generate_baseline_data.py  parallel_tests_impl.md  quality.py  run_tests.sh  test_schema_generation.py
tools/scripts/: quality_check.sh  quality_fix.sh
tools/test_scripts/: test_dependency_installation.py
(+83 files in other folders)
