[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "h2k_hpxml"
description = "H2K to HPXML to EnergyPlus translation tool for Canadian building energy models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "H2K HPXML Team"}
]
keywords = ["energy", "building", "simulation", "h2k", "hpxml", "energyplus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.2",
    "pandas==2.1.3",
    "python-dateutil==2.8.2",
    "pytz==2023.3.post1",
    "six==1.16.0",
    "tzdata==2023.3",
    "xmltodict==0.13.0",
    "unidecode==1.3.8",
    "click==8.1.7",
    "colorama==0.4.6",
    "pyfiglet==1.0.2",
    "requests==2.32.3",
    "filelock==3.18.0",
    "pyyaml==6.0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
]
dev = [
    "pytest==8.3.3",
]

[project.urls]
Homepage = "https://github.com/canmet-energy/h2k_hpxml"
Repository = "https://github.com/canmet-energy/h2k_hpxml"
Documentation = "https://github.com/canmet-energy/h2k_hpxml/blob/main/README.md"

[project.scripts]
h2k2hpxml = "h2k_hpxml.cli.convert:main"
h2k-resilience = "h2k_hpxml.cli.resilience:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "regression: regression tests that compare against baseline data",
    "resilience: resilience CLI functionality tests",
    "slow: tests that take a long time to run",
    "baseline: tests for generating baseline data (use with --run-baseline flag)",
]